--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,13 @@
   	<description></description>
   	<servlet-class>com.granumignis.web.CreateItemController</servlet-class>
   </servlet>
+
+  <servlet>
+    <servlet-name>UpdateItemController</servlet-name>
+    <display-name>UpdateItemController</display-name>
+    <description></description>
+    <servlet-class>com.granumignis.web.UpdateItemController</servlet-class>
+  </servlet>
   
  
 <!-- Servlet Mapping Section Below -->
@@ -45,6 +52,10 @@
   	<servlet-name>CreateItemController</servlet-name>
   	<url-pattern>/createItem</url-pattern>
   </servlet-mapping>
-  
+
+  <servlet-mapping>
+    <servlet-name>UpdateItemController</servlet-name>
+    <url-pattern>/updateItem</url-pattern>
+  </servlet-mapping>
   
 </web-app>
